fixed snow on mobile

--- a/style/Theme.css
+++ b/style/Theme.css
@@ -14,7 +14,7 @@
 }
 
 html {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -413,6 +413,19 @@ body {
   border-bottom: 10px solid rgb(116, 65, 0);
   border-right: 10px solid rgb(116, 65, 0);
   visibility: hidden;
+  color: black;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.text {
+  position: absolute;
+  color: black;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  top: 0;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .pressie {
